--- a/css/style.css
+++ b/css/style.css
@@ -284,6 +284,22 @@ body  {
 
 #main {
     width: 100%;
+    margin: auto;
+
+    #form-title {
+        margin: 2rem 2rem 0 3rem;
+        font-weight: 700;
+        font-size: 1.5rem;
+    }
+
+    #form-layout {
+
+        * {
+            margin: 1rem;
+        }
+
+        padding: 2rem;
+    }
 }
 
 /* Footer */
